--- a/.travis.yml
+++ b/.travis.yml
@@ -20,11 +20,11 @@ notifications:
   email: false
 deploy:
   provider: pages
-  skip-cleanup: true
+  skip_cleanup: true
   local_dir: public/
   github-token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
   repo: davidmartinho/davidmartinho.github.io
-  keep-history: true
+  keep_history: true
   target-branch: master
   on:
     branch: master
