--- a/.travis.yml
+++ b/.travis.yml
@@ -22,9 +22,9 @@ deploy:
   provider: pages
   skip_cleanup: true
   local_dir: public/
-  github-token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
+  github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
   repo: davidmartinho/davidmartinho.github.io
   keep_history: true
-  target-branch: master
+  fqdn: routine.run  
   on:
     branch: master
