--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ deploy:
   github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
   repo: davidmartinho/davidmartinho.github.io
   keep_history: true
-  fqdn: routine.run  
+  fqdn: routine.run
+  target_branch: master
   on:
-    branch: master
+    branch: development
